src/test/control_flujo/error_if_no_boolean.cps
// ❌ Condición no booleana en if (integer no es boolean).
let x: integer = 1;
if (x) { } // error: condición debe ser boolean
